--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="description" content="" />
     <meta http-equiv="Content-Language" content="it" />
     <meta name="author" content="Alberto Scarsi" />
+    
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="img/cbc_favicon_.webp" />
     <title>Carbo Beach Cup | Torneo di Beach Volley</title>
 </head>
 
