--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
         <footer id="footer">
             <h6>Website by <a href="https://www.aswd.it/" target="_blank" rel="noopener noreferrer">aswd.it</a></h6>
-            <img src="/img/cbc_img.webp" alt="" class="img-footer">
+            <img src="img/cbc_img.webp" alt="" class="img-footer">
 
         </footer>
 
