--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Language" content="it" />
     <meta name="author" content="Alberto Scarsi" />
-    
+    <meta name="description"
+        content="La Carbo Beach Cup: un torneo di beach volley tra sport, musica, cibo e festa. Un'weekend di schiacciate, battute, palleggi e divertimento sulla sabbia!" />
 
+    <!-- <link rel="canonical" href="https://www.aswd.it" /> -->
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="img/cbc_favicon_.webp" />
     <title>Carbo Beach Cup | Torneo di Beach Volley</title>
@@ -23,7 +25,7 @@
                 <a href="#home">Home</a>
                 <a href="#cose">Cos'è</a>
                 <a href="#edizioni">Edizioni</a>
-                <a href="#contatti">Foto</a>
+                <a href="#foto-gallery">Foto</a>
                 <a href="#menu">Menù</a>
                 <a href="#iscrizione">Iscriviti</a>
             </nav>
@@ -102,7 +104,7 @@
                     </div>
 
                     <div class="cont-edizione">
-                        <img src="img/cbc_img.webp" alt="" class="edizioni-img" />
+                        <img src="img/20.webp" alt="" class="edizioni-img" />
                         <h4 class="duetre">2024</h4>
                         <div class="descrizione">
                             <h5>Edizione 2024: l'anno del boom, doppio campo e DJ set fino a
@@ -133,9 +135,25 @@
             </section>
         </div>
 
-        <div>
-            <!-- CAROSELLO CHE SI MUOVE CON TANTE IMMAGINI - 3 STRATI -->
-        </div>
+        <section id="foto-gallery">
+            <div class="container">
+                <h3>Foto CBC</h3>
+            </div>
+
+            <div id="gallery-carousel">
+                <div class="carousel-row" id="carousel-row-1"></div>
+                <div class="carousel-row reverse" id="carousel-row-2"></div>
+            </div>
+
+            <!-- Modal per immagine -->
+            <div class="image-modal" id="image-modal">
+                <div class="modal-content">
+                    <span class="close-modal" id="close-modal">&times;</span>
+                    <img src="" alt="Foto grande" id="modal-img" />
+                </div>
+            </div>
+        </section>
+
 
         <section id="menu">
             <div class="container">
@@ -433,8 +451,10 @@
 
         </div>
     </main>
+
 </body>
 
 <script src="script.js"></script>
+<!-- <script src="image.js"></script> -->
 
 </html>
