--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" class="menu-button">Ordina dall'app!</button>
+                    <a href="https://app.carbobeachcup.it/login" target="_blank"  rel="noopener noreferrer"><button type="button" class="menu-button">Ordina dall'app!</button></a>
                 </div>
 
 
@@ -400,7 +400,7 @@
                 <h3>Iscriviti alla Carbo Beach Cup!</h3>
 
                 <form action="https://formsubmit.co/albertoscarsi9@gmail.com" method="POST" class="cbc-form">
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/index.html#cose" />
+                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/index.html#cose"/>
                     <div class="form-group">
                         <input type="text" id="nome" name="nome" placeholder=" " required />
                         <label for="nome">Nome*</label>
@@ -440,6 +440,8 @@
         </section>
 
         <footer id="footer">
+            
+            <p><a href="https://www.instagram.com/carbobeachcup/" target="_blank" rel="noopener noreferrer">Instagram</a></p>
             <h6>Website by <a href="https://www.aswd.it/" target="_blank" rel="noopener noreferrer">aswd.it</a></h6>
             <img src="img/cbc_img.webp" alt="" class="img-footer">
 
