--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
             <div class="container">
                 <h3>Iscriviti alla Carbo Beach Cup!</h3>
 
-                <form action="https://formsubmit.co/albertoscarsi9@gmail.com" method="POST" class="cbc-form">
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/index.html#cose"/>
+                <form action="https://formsubmit.co/albertoscarsi9@gmail.com" method="POST" class="cbc-form" target="_blank">
+                    <input type="hidden" name="_next" value="https://www.carbobeachcup.it/"/>
                     <div class="form-group">
                         <input type="text" id="nome" name="nome" placeholder=" " required />
                         <label for="nome">Nome*</label>
