--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="https://app.carbobeachcup.it/login" target="_blank"  rel="noopener noreferrer"><button type="button" class="menu-button">Ordina dall'app!</button></a>
+                    <a href="https://app.carbobeachcup.it/" target="_blank"  rel="noopener noreferrer"><button type="button" class="menu-button">Ordina dall'app!</button></a>
                 </div>
 
 
